testsuite/tests/ffi/should_fail/ccfail001.stderr

ccfail001.hs:10:1: error: [GHC-89401]
    • Unacceptable result type in foreign declaration:
        ‘State# RealWorld’ cannot be marshalled in a foreign call
    • When checking declaration:
        foreign import ccall safe foo :: Int -> State# RealWorld
